# matheval

./: .gitignore  BATCH_EVALUATION.md  Cargo.toml  LICENSE  OPTIMIZATION_SUMMARY.md  README.md
crates/matheval-core/: Cargo.toml
crates/matheval-core/examples/: benchmark.rs  benchmark_eval.py  benchmark_rust.rs  constant_pool_benchmark.rs  error_handling.rs  financial_option.py  financial_option.rs  repl.rs  simple.rs
crates/matheval-core/src/: ast.rs  bytecode.rs  compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs  vm.rs
python/matheval-py/: Cargo.toml  README.md  pyproject.toml
python/matheval-py/examples/: batch_eval_basic.py  batch_eval_monte_carlo.py  batch_eval_parameter_sweep.py
python/matheval-py/src/: lib.rs
python/matheval-py/tests/: example_monte_carlo.py  test_matheval.py
