[package]
name = "matheval-py"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "matheval"
# cdylib for Python extension, rlib for Rust tests
crate-type = ["cdylib", "rlib"]

[dependencies]
# Don't use extension-module by default to allow testing without Python
pyo3 = { version = "0.21" }
matheval-core = { path = "../../crates/matheval-core" }

[features]
# Use this feature when building the Python extension
default = []
extension-module = ["pyo3/extension-module"]
